# dmitool

./: Cargo.toml  README.md
.circleci/: config.yml
src/: dmi.rs  main.rs  raw.rs
src/dmi/: decode.rs  entrypoint.rs  err.rs  raw.rs  table.rs
src/dmi/table/: mod.rs  table0.rs  table1.rs  table2.rs  table3.rs
src/dmi/table/table/: table0.rs  table1.rs  table2.rs
src/raw/: err.rs
tests/cmd/: h.stdout  help.stdout  help.toml
