[package]
name = "dmitool"
version = "0.1.0"
authors = ["Noah Meyerhans <frodo@morgul.net>"]
edition = "2018"
license = "GPL-2.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
log = "0.4"
env_logger = "0.8"
trycmd = "0.15.3"
